--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ body {
   margin: 0;
   font-family: "DM Mono", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: #1f1e1d;
 }
 
 a {
